--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
+
 <html>
-
 <head>
-     <meta charset="utf-8">
-     <title>Мой первый сайт</title>
+
+     <title>Это заголовок веб страницы</title>
 </head>
-
 <body>
-    <h1>ООО "Почта России"</h1>
-     <p>Телефон: 8 (800) 100-00-00</p>
+<header>
+<h1>
+baby
+</h1>
+<nav>
+<a title="a">Забота о малыше</a>
+<a title="a">с первых дней жизни</a>
+</nav>
+</header>
+<section>
+  <article>
+    <p>
+    Когда малыш появляется на свет, ты стараешься дать ему самое лучшее. Понимая твои заботы и используя все свои знания об уходе за кожей, мы создали серию для младенцев, в которой каждое средство на 95% состоит из натуральных ингредиентов и одобрено педиатрами.
+    </p>
+  </article>
+</section>
+<footer>НА 95% НАТУРАЛЬНЫЕ, НА 100% СДЕЛАНЫ С ЛЮБОВЬЮ</footer>
 </body>
-
 </html>
